--- a/test/integration/simple_example/inspec.yml
+++ b/test/integration/simple_example/inspec.yml
@@ -7,6 +7,6 @@ attributes:
   - name: project_id
     required: true
     type: string
-  - name: bucket_name
+  - name: domain
     required: true
     type: string
