--- a/.github/release-please.yml
+++ b/.github/release-please.yml
@@ -1,4 +1,4 @@
-# Copyright 2021 Google LLC
+# Copyright 2022 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,18 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
- on:
-   push:
-     branches:
-       - main
- name: release-please
- jobs:
-   release-please:
-     runs-on: ubuntu-latest
-     steps:
-       - uses: google-github-actions/release-please-action@v2
-         with:
-           token: ${{ secrets.GITHUB_TOKEN }}
-           release-type: terraform-module
-           package-name: release-please-action
-           bump-minor-pre-major: Yes
+releaseType: terraform-module
+handleGHRelease: true
